# Gource

./: CMakeLists.txt
src/: gource.cpp  gource_settings.cpp  gource_shell.cpp
